# TestTask

./: CMakeLists.txt  README.md  build.bat
data/: example1.txt  example2.txt
include/: ComputerClub.h  Event.h  MyTime.h  Parser.h  Table.h  Time.h
src/: ComputerClub.cpp  Event.cpp  MyTime.cpp  Parser.cpp  Table.cpp  Time.cpp  main.cpp
